k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw3-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw3
  template:
    metadata:
      labels:
        app: hw3
    spec:
      containers:
        - name: hw3
          image: dmitriyburets1982/hw2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000         
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
