k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-service
spec:
  type: NodePort
  selector:
    app: hw3
  ports:
    - name: hw3
      protocol: TCP
      port: 80
      targetPort: 8080
